# data-structures-hw-2

./: CMakeLists.txt  Player.cpp  Player.h  PowerAndId.cpp  PowerAndId.h  Team.cpp  Team.h  delete.out  hashtable.h  inp_to_code.py  last_input.txt  main.py  main24a2.cpp  makefile  node.h  olympics24a2.cpp  olympics24a2.h  submissions.txt  tree.h  wet-verify.py  wet2util.h
Tests/: get_highest_ranked_team.cpp  improved_test.in.txt  omartest.in.txt  omartest.out  test-get_highest_ranked_team.cpp  test-hashtable.cpp  test-num_wins_for_team.cpp  test1.cpp  testTree.cpp  tournamentTest1.in  tournamentTest1.out.txt
example_test/: randtest0.in  randtest0.out
